--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                     <label for="" class="label control-label">Name</label>
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-addon"><i class="far fa-user grey-icons"></i></span>
-                        <input type="text" class="form-control" placeholder="Name" name="name">
+                        <input type="text" class="form-control" placeholder="Name" name="name" required>
                     </div>
                     <label for="" class="label control-label">E-mail</label>
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-addon"><i class="far fa-envelope-open grey-icons"></i></span>
-                        <input type="mail" class="form-control" placeholder="E-mail" name="mail">
+                        <input type="mail" class="form-control" placeholder="E-mail" name="mail" required>
                     </div>  
                     <label for="" class="label control-label">Contact NO.</label>
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-addon"><i class="fas fa-phone grey-icons"></i></span>
-                        <input type="mail" class="form-control" placeholder="Phone" name="phone">
+                        <input type="mail" class="form-control" placeholder="Phone" name="phone" required>
                     </div>
-                    <a href="#"><button class="btn btn-secondary btn-">SIGN UP</button></a>
+                    <input type="button" class="btn btn-secondary btn-lg" value="Sign Up!" onclick="signUp()">
                 </form>
             </div>
         </div>
