--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="input-group-addon"><i class="fas fa-phone grey-icons"></i></span>
                         <input type="mail" class="form-control" placeholder="Phone" name="phone" required>
                     </div>
-                    <input type="button" class="btn btn-secondary btn-lg" value="Sign Up!" onclick="signUp()">
+                    <input type="button" class="btn btn-secondary btn-lg" value="Sign Up!" onclick="signUpForm()">
                 </form>
             </div>
         </div>
