--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container">
         <div class="row d-flex">
             <div class="col-md-5">
-                <form action="" class="registration-form">
+                    <!-- onsubmit="signUpForm()" -->
+                <form action="#" class="registration-form">
                     <h1 class=" text center display-4">Sign Up</h1>
                     <label for="" class="label control-label">Name</label>
                     <div class="input-group input-group-sm mb-3">
@@ -29,12 +30,13 @@
                     <label for="" class="label control-label">Contact NO.</label>
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-addon"><i class="fas fa-phone grey-icons"></i></span>
-                        <input type="mail" class="form-control" placeholder="Phone" name="phone" required>
+                        <input type="tel" class="form-control" placeholder="Phone" name="phone" required>
                     </div>
-                    <input type="button" class="btn btn-secondary btn-lg" value="Sign Up!" onclick="signUpForm()">
+                    <input type="submit" id="submitButton" class="btn btn-secondary btn-lg" name="submit" value="Sign Up!" >
                 </form>
             </div>
         </div>
     </div>
 </body>
+<script src="register.js"></script>
 </html>
